# eeg-hackathon

./: .env.example  .gitignore  .gitmodules  .koa.yaml.example  AGENT.md  BIOMARKERS.md  README.md  environment.yml  extract_biomarkers.py  extract_ds004504.py  extract_lead.py  generate_summaries.py  luna_eval.py  requirements.txt  setup.py
.jupyter/: migrated
archive/: README.md  requirements.txt
archive/LaBraM/: README.md
archive/src/: pipeline.py
configs/: lead_train.yaml
data/: ADFSU_biomarkers.csv  ADFTD-PS_biomarkers.csv  ADFTD-RS_biomarkers.csv  ADFTD_biomarkers.csv  ADSZ_biomarkers.csv  APAVA_biomarkers.csv  APAVA_biomarkers_cn_norms.json
koa-cli/: .gitignore  README.md  config.example.yaml  pyproject.toml  ssh.md  wandb.env.example
koa-cli/scripts/: dev-lint  dev-test  koa-dev  smoke.slurm
koa-cli/src/koa_cli/: __init__.py  cli.py  config.py  console.py  history.py  slurm.py  ssh.py  wizard.py
koa-cli/tests/: test_cli.py  test_cli_integration.py  test_config.py  test_history.py  test_slurm.py  test_ssh.py
notebooks/: LEAD.ipynb  biomarkers.ipynb  eeg_hackathon.ipynb  eeg_hackathon2.ipynb  exploring-eeg-a-beginner-s-guide.ipynb  labram_finetune.ipynb
output/cn_ftd_grouped/: luna_eval_my-luna-model-alz_metrics.json  luna_eval_my-luna-model-alz_preds.npz
scripts/: 01_download_lead.py  02_import_lead.py  03_create_splits.py  04_train.py  05_sync_to_sheets.py  06_push_to_hub.py  07_inference.py  train.slurm
scripts/biomarkers/: extract_ds004504.py  (+2 more)
slurm/: extract_ds004504.sbatch  extract_lead.sbatch  gather.py
src/: __init__.py  config.py  extract_biomarkers.py  llm_inference.py  shap_explainer.py  text_reasoning.py  tracking.py
(+17 files in other folders)
