[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "koa-cli"
version = "0.3.0"
description = "Clean command-line utilities for working with the KOA HPC cluster."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Michael Buriek"}]
keywords = ["koa", "slurm", "hpc", "ssh", "rsync"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: System :: Clustering",
]
dependencies = [
  "PyYAML>=6.0.1",
  "rich>=13.7.0",
]

[project.optional-dependencies]
wandb = [
  "wandb>=0.22.0",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/michaelburiek/codex-koa-cli"
Repository = "https://github.com/michaelburiek/codex-koa-cli"
Issues = "https://github.com/michaelburiek/codex-koa-cli/issues"

[project.scripts]
koa = "koa_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
koa_cli = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
